multiprocessing.txt
Script started on 2023-02-02 09:22:48+01:00 [TERM="xterm-256color" TTY="/dev/pts/0" COLUMNS="80" LINES="24"]
[?2004h]0;alumno@aula426: ~[01;32malumno@aula426[00m:[01;34m~[00m$ rm -r .ssh/
[?2004lrm: no se puede borrar '.ssh/': No existe el archivo o el directorio
[?2004h]0;alumno@aula426: ~[01;32malumno@aula426[00m:[01;34m~[00m$ unzip Descargas/ssh.zip
[?2004lArchive:  Descargas/ssh.zip
   creating: .ssh/
  inflating: .ssh/id_rsa             
  inflating: .ssh/id_rsa.pub         
  inflating: .ssh/known_hosts        
[?2004h]0;alumno@aula426: ~[01;32malumno@aula426[00m:[01;34m~[00m$ ls -al .ssh/
[?2004ltotal 20
drwx------  2 alumno alumno 4096 ene 26 09:21 [0m[01;34m.[0m
drwxr-x--- 31 alumno alumno 4096 feb  2 09:52 [01;34m..[0m
-rw-------  1 alumno alumno 1823 ene 26 09:21 id_rsa
-rw-r--r--  1 alumno alumno  396 ene 26 09:21 id_rsa.pub
-rw-r--r--  1 alumno alumno  270 may 23  2022 known_hosts
[?2004h]0;alumno@aula426: ~[01;32malumno@aula426[00m:[01;34m~[00m$ git clone git@github.com:gbrisan/practica1.git
[?2004lClonando en 'practica1'...
The authenticity of host 'github.com (140.82.121.3)' can't be established.
ED25519 key fingerprint is SHA256:+DiY3wvvV6TuJJhbpZisF/zLDA0zPMSvHdkr4UvCOqU.
This key is not known by any other names
Are you sure you want to continue connecting (yes/no/[fingerprint])? yes
Warning: Permanently added 'github.com' (ED25519) to the list of known hosts.
remote: Enumerating objects: 4, done.[K
remote: Counting objects:  25% (1/4)[Kremote: Counting objects:  50% (2/4)[Kremote: Counting objects:  75% (3/4)[Kremote: Counting objects: 100% (4/4)[Kremote: Counting objects: 100% (4/4), done.[K
remote: Compressing objects:  33% (1/3)[Kremote: Compressing objects:  66% (2/3)[Kremote: Compressing objects: 100% (3/3)[Kremote: Compressing objects: 100% (3/3), done.[K
remote: Total 4 (delta 0), reused 0 (delta 0), pack-reused 0[K
Recibiendo objetos:  25% (1/4)Recibiendo objetos:  50% (2/4)Recibiendo objetos:  75% (3/4)Recibiendo objetos: 100% (4/4)Recibiendo objetos: 100% (4/4), 12.48 KiB | 1.13 MiB/s, listo.
[?2004h]0;alumno@aula426: ~[01;32malumno@aula426[00m:[01;34m~[00m$ ls
[?2004l[0m[01;34mDescargas[0m            os          sesion.txt                     Untitled4.ipynb
[01;34mDocumentos[0m           [01;34mPlantillas[0m  [01;34msnap[0m                           Untitled5.ipynb
[01;34mEscritorio[0m           [01;34mpractica1[0m   [01;31mspark-3.2.1-bin-hadoop3.2.tgz[0m  Untitled.ipynb
[01;34mImágenes[0m             [01;34mprpa[0m        Untitled1.ipynb                [01;34mvenv[0m
multiprocessing.txt  [01;34mPúblico[0m     Untitled2.ipynb                [01;34mVídeos[0m
[01;34mMúsica[0m               [40;31;01mpyspark[0m     Untitled3.ipynb
[?2004h]0;alumno@aula426: ~[01;32malumno@aula426[00m:[01;34m~[00m$ python3
[?2004lPython 3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> practica1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'practica1' is not defined
>>> practica1.py
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'practica1' is not defined
>>> ^V
KeyboardInterrupt
>>> ^D
  File "<stdin>", line 1
    
    ^
SyntaxError: invalid syntax
>>> 
[?2004h]0;alumno@aula426: ~[01;32malumno@aula426[00m:[01;34m~[00m$ python[K[K[K[K[K[Kcd practica1/
[?2004l[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ python3 practica1.py
[?2004lfin
hola 0
hola 0
hola 1
hola 2
hola 1
hola 2
hola 3
hola 4
hola 3
hola 4
[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ git add practica1.py
[?2004l[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ git commit -m 1e1l1 1[C
[?2004lerror: ruta especificada '1' no concordó con ningún archivo conocido por git
[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ git commit -m el 1"[C[1@"
[?2004lIdentidad del autor desconocido

*** Por favor cuéntame quién eres.

Ejecuta

  git config --global user.email "you@example.com"
  git config --global user.name "Tu Nombre"

para configurar la identidad por defecto de tu cuenta.
Omite --global para configurar tu identidad solo en este repositorio.

fatal: no es posible auto-detectar la dirección de correo (se obtuvo 'alumno@aula426.(none)')
[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ git config --global helfferr[K[K[K[Kerrer[K[K[K[K[K[K[K[K[Kuser.email "helferrer[K@ucm.es"
[?2004l[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ git config --global user.email "helferre@ucm.es"[1P[1P[1P[1P[C[1P "helferre@ucm.es"n "helferre@ucm.es"a "helferre@ucm.es"m "helferre@ucm.es"e "helferre@ucm.es"[C "helferre@ucm.es"[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[1Ps"[1Ps"[1Ps"[1Ps"[1Ps"[1Ps"[1Ps"[C[1P"[1P"[1P"[1P"[1P"[1P"[1P"[1P"H"e"l"e"n"a"[C
[?2004l[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ git commit -m "el 1"
[?2004l[main c058fb2] el 1
 1 file changed, 29 insertions(+)
 create mode 100644 practica1.py
[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ git push
[?2004lEnumerando objetos: 4, listo.
Contando objetos:  25% (1/4)Contando objetos:  50% (2/4)Contando objetos:  75% (3/4)Contando objetos: 100% (4/4)Contando objetos: 100% (4/4), listo.
Compresión delta usando hasta 6 hilos
Comprimiendo objetos:  33% (1/3)Comprimiendo objetos:  66% (2/3)Comprimiendo objetos: 100% (3/3)Comprimiendo objetos: 100% (3/3), listo.
Escribiendo objetos:  33% (1/3)Escribiendo objetos:  66% (2/3)Escribiendo objetos: 100% (3/3)Escribiendo objetos: 100% (3/3), 595 bytes | 595.00 KiB/s, listo.
Total 3 (delta 0), reusados 0 (delta 0), pack-reusados 0
To github.com:gbrisan/practica1.git
   3672ce5..c058fb2  main -> main
[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ rm [K]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ rm [K]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ rm more [K[K[K[K[K[K[K[Kmore .gitconfig
[?2004lmore: no se puede abrir .gitconfig: No existe el archivo o el directorio
[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ rm -r .ssh/ .git*
[?2004lrm: no se puede borrar '.ssh/': No existe el archivo o el directorio
rm: ¿borrar el fichero regular '.git/objects/pack/pack-954a7f6b5296225b0acace31ad34f250c7323f8d.pack'  protegido contra escritura? (s/n) rm: ¿borrar el fichero regular '.git/objects/pack/pack-954a7f6b5296225b0acace31ad34f250c7323f8d.idx'  protegido contra escritura? (s/n) rm: no se puede borrar '.git/objects/pack': El directorio no está vacío
rm: ¿borrar el fichero regular '.git/objects/de/3b6ef5bda5b487b7b9e3af29ac7ffed2f05574'  protegido contra escritura? (s/n) rm: no se puede borrar '.git/objects/de': El directorio no está vacío
rm: ¿borrar el fichero regular '.git/objects/b5/be24281d9e39528a425f781b419ddb171a1029'  protegido contra escritura? (s/n) rm: no se puede borrar '.git/objects/b5': El directorio no está vacío
rm: ¿borrar el fichero regular '.git/objects/c0/58fb28b4fe8b888e40cbe37296fb80e58d4c0a'  protegido contra escritura? (s/n) rm: no se puede borrar '.git/objects/c0': El directorio no está vacío
[?2004h]0;alumno@aula426: ~/practica1[01;32malumno@aula426[00m:[01;34m~/practica1[00m$ [?2004l
exit

Script done on 2023-02-02 10:54:20+01:00 [COMMAND_EXIT_CODE="1"]
